[gd_scene load_steps=17 format=3 uid="uid://dy2k77vkmef6s"]

[ext_resource type="Script" path="res://scripts/Enemies/Skeleton/mini_boss.gd" id="1_63u4t"]
[ext_resource type="Texture2D" uid="uid://dv53y0s5rqkis" path="res://sprites/Skeleton/Skeleton enemy.png" id="2_yc570"]
[ext_resource type="AudioStream" uid="uid://dyddo5owe2pna" path="res://audio/sound_effects/skeleton_dying.mp3" id="3_yy1xq"]
[ext_resource type="AudioStream" uid="uid://dy1wrwcwqs2r2" path="res://audio/sound_effects/skeleton_attack.mp3" id="4_44gll"]
[ext_resource type="PackedScene" uid="uid://ctvo0hpxv37ja" path="res://components/UI/healthbar.tscn" id="5_hw8f2"]
[ext_resource type="FontFile" uid="uid://by3kquboighkq" path="res://fonts/Gothica-Bold.ttf" id="6_vqn2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvmtj"]
size = Vector2(28.5714, 34.2857)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yf5r"]
size = Vector2(28.5714, 34.2857)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4q4ll"]
size = Vector2(20.8572, 40)

[sub_resource type="Animation" id="Animation_jave2"]
resource_name = "Dead"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_kogg6"]
resource_name = "Idle"
length = 1.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_r2q3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Atack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q7y5l"]
resource_name = "Walk"
length = 1.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_x2c86"]
resource_name = "atack"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Atack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j41cr"]
_data = {
"Dead": SubResource("Animation_jave2"),
"Idle": SubResource("Animation_kogg6"),
"RESET": SubResource("Animation_r2q3h"),
"Walk": SubResource("Animation_q7y5l"),
"atack": SubResource("Animation_x2c86")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3p8n"]
size = Vector2(280, 36)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 3
script = ExtResource("1_63u4t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.13687e-13, -22.8571)
shape = SubResource("RectangleShape2D_qvmtj")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 44

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.04359e-06, -22.8571)
shape = SubResource("RectangleShape2D_1yf5r")

[node name="Timer" type="Timer" parent="."]

[node name="Atack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Atack"]
position = Vector2(27.5714, -27.1429)
shape = SubResource("RectangleShape2D_4q4ll")
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(1, -10)
target_position = Vector2(26, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j41cr")
}
autoplay = "Idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2.85714, -22.8571)
texture = ExtResource("2_yc570")
hframes = 13
vframes = 5
frame = 26

[node name="dying_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_yy1xq")
volume_db = -4.57

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_44gll")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("5_hw8f2")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -421.0
offset_top = -80.0
offset_right = 303.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -415.0
offset_top = -120.0
offset_right = 45.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_vqn2h")
theme_override_font_sizes/font_size = 30
text = "Skeleton King"

[node name="bar_show_collider" type="Area2D" parent="."]
position = Vector2(92, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bar_show_collider"]
position = Vector2(-90, -24)
shape = SubResource("RectangleShape2D_q3p8n")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Atack" to="." method="_on_atack_area_entered"]
[connection signal="area_shape_entered" from="Atack" to="." method="_on_atack_area_shape_entered"]
[connection signal="body_entered" from="Atack" to="." method="_on_atack_body_entered"]
[connection signal="body_shape_entered" from="Atack" to="." method="_on_atack_body_shape_entered"]
[connection signal="body_entered" from="bar_show_collider" to="." method="_on_bar_show_collider_body_entered"]
[connection signal="body_shape_entered" from="bar_show_collider" to="." method="_on_bar_show_collider_body_shape_entered"]
